--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Map-Prediction Guided Planning under Uncertainty"
-excerpt: #"Short description of portfolio item number 1<br/><img src='/images/inpainting1.png'>"
+excerpt: "<br/><img src='/images/inpainting1.png'>"
 collection: portfolio
 ---
 
